package rideready.abstractfactory;

public interface SafetyEquipment {
    VehicleCategory category();
    String description();
}
