package rideready.abstractfactory;

public interface SecurityDevice {
    VehicleCategory category();
    String description();
}
